# docuparse

./: .gitignore  README.md  bill_analyzer.code-workspace  docuparse.code-workspace  mypy.ini  pyproject.toml  run_analyzer.py
.github/workflows/: ci.yml
bill_analyzer/: claude_api.py  config.py  main.py  ods_to_json_parser.py  utils.py  validators.py
docuparse/: __init__.py  __main__.py  config.py  main.py  paperless_api.py  ui.py
