[project]
name = "docuparse"
version = "1.0.0"
description = "AI-powered document parser for extracting structured data from PDFs"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.75.0",
    "requests>=2.32.0",
    "python-dotenv>=1.0.0",
"python-dateutil>=2.9.0",
    "PySide6>=6.10.2",
]

[project.optional-dependencies]
dev = [
    "mypy>=1.0.0",
    "pytest>=9.0.2",
    "ruff>=0.11.0",
    "types-requests",
    "types-python-dateutil",
]

[project.scripts]
docuparse = "docuparse.main:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["docuparse*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.ruff.lint.isort]
known-first-party = ["docuparse"]
